@@ -1,6 +1,7 @@
 2008-07-02  Perry McFarlane  <perry_m@fastmail.fm>
 * javanvm/atari_javanvm.c: compile without SOUND
 * atari_sdl.c: name changes
+* sndsave.[ch], atari.c, pokeysnd.c, ui.c: rename externals with SndSave_
 
 
 2008-06-30  Perry McFarlane  <perry_m@fastmail.fm>
